--- a/package.json
+++ b/package.json
@@ -10,8 +10,35 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/auth": "^18.7.3",
+    "@react-native-firebase/messaging": "^18.7.3",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@rneui/base": "github:react-native-elements/react-native-elements#base",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "async-storage": "^0.1.0",
+    "firebase": "^10.7.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.1"
+    "react-native": "0.73.1",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.9.1",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-paper": "^5.11.6",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -28,6 +55,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   },
   "engines": {
